# reasonable-koala

./: .gitignore  Makefile  README.md  docker-compose.yml  sample_config.json
database/: Cargo.toml
database/migrations/: 1_initial.sql
database/src/: access_token.rs  driver.rs  lib.rs  oauth2_client.rs
docs/: Dockerfile  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: index.md
docs/src/oauth2/: authorization.md  index.md  introspect.md
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/database/: Cargo.toml
server/database/migrations/: 1_initial.sql
server/database/src/: access_token.rs  constant_access_tokens.rs  hash.rs  (+4 more)
server/reasonable_koala/: Cargo.toml
server/wilford/: Cargo.toml
server/wilford/src/: config.rs  main.rs
server/wilford/src/espo/: user.rs
server/wilford/src/routes/: appdata.rs  auth.rs  empty.rs  error.rs
server/wilford/src/routes/oauth/: authorize.rs  introspect.rs  mod.rs  token.rs
server/wilford/src/routes/v1/: mod.rs
server/wilford/src/routes/v1/auth/: authorization_info.rs  authorize.rs  login.rs  mod.rs  token_info.rs
server/wilford/src/routes/v1/clients/: add.rs  internal.rs  list.rs  mod.rs  remove.rs
server/wilford/src/routes/v1/user/: info.rs  list.rs  mod.rs
server/wilford/src/routes/v1/user/permitted_scopes/: add.rs  list.rs  mod.rs
ui/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
ui/src/: main.ts
wilford/src/: config.rs  main.rs
wilford_oauth/: Cargo.toml
wilford_oauth/src/: introspect.rs  lib.rs  token.rs  token_info.rs  user_info.rs
wilford_oauth/src/actix/: config.rs  error.rs  extractor.rs  mod.rs
(+83 files in other folders)
