[package]
name = "wilford_oauth"
version = "0.1.0"
edition = "2021"

[features]
default = [ "actix-web" ]

[dependencies]
actix-web = { version = "4.4.1", optional = true, default-features = false }
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_qs = "0.12.0"
thiserror = "1.0.52"
tracing = "0.1.40"